# roblox-previewer

./: .gitignore  CMakeLists.txt
scripts/: bgfx.cmake  glfw.cmake  imgui.cmake
shaders/: varying.def.sc
src/: common.hpp  main.cpp
src/application/: application.cpp  application.hpp
src/application/frontend/glfw/: glfw_application.cpp  glfw_application.hpp
src/engine/: engine.cpp  engine.hpp
src/renderer/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  drawable.hpp  imgui.cpp  imgui.hpp  renderer.cpp  renderer.hpp  shader_utils.cpp  shader_utils.hpp
src/utils/: shader_utils.cpp  shader_utils.hpp  utils.cpp  utils.hpp
